--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,22 +1,21 @@
 .login{
-    display:grid;
-    place-items:center;
+    position: relative;
+    height:100vh;
+    background: url('https://www.solutionanalysts.com/wp-content/uploads/2021/02/Iot-Home-Automation-Solutions.png')
+    center no-repeat;
+    background-size: cover;
+    
+    }
+    
+    .login__gradient{
+    width:100%;
+    z-index: 1;
     height: 100vh;
-
-}
-
-.login__container{
-    display: flex;
-    flex-direction: column;
-    padding: 100px;
-    align-items: center;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0px 4px 14px -3px rgba(0,0,0,0.7);
-}
-
-.login__container > img{
-    height: 200px;
-    width: 200px;
-    margin-bottom: 50px;
-}
+    background: rgba(0,0,0,0.4);
+    background-image: linear-gradient(
+        to top,
+        rgba(0,0,0,0.8) 0,
+        rgba(0,0,0,0) 60%,
+        rgba(0,0,0,0.8) 100%
+    );
+    }
